--- a/seaBattle.css
+++ b/seaBattle.css
@@ -108,7 +108,15 @@ th {
     align-items: center;
 }
 
-.z {
-    /*position: absolute;*/
-    /*opacity: 0;*/
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-5px); }
+    50% { transform: translateX(5px); }
+    75% { transform: translateX(-5px); }
+    100% { transform: translateX(0); }
+}
+
+.shake {
+    animation: shake 0.4s;
+    border: #e11414 solid 2px;
 }
