--- a/seaBattle.css
+++ b/seaBattle.css
@@ -28,11 +28,11 @@ h1 {
 /*..........table elems.........*/
 table {
     border-collapse: collapse;
-    margin: 0;
+    /*margin: 0;*/
     padding: 0;
     table-layout: fixed;
+    /*margin-left: 30px;*/
 }
-
 td {
     border: 1px solid #4644a6;
     width: 50px;
@@ -42,7 +42,6 @@ td {
     padding: 0;
     position: relative;
 }
-
 th {
     border: none;
     font-weight: lighter;
@@ -189,4 +188,12 @@ th {
     font-size: 20px;
     cursor: pointer;
     color: #ffffff;
+}
+
+.active-fields {
+    display: flex;
+}
+.text-ownerField {
+    margin-top: 20px;
+
 }
