--- a/seaBattle.css
+++ b/seaBattle.css
@@ -35,7 +35,7 @@ table {
 }
 
 td {
-    border: 1px solid #4644a6;
+    border: 1px solid #b4b4ff;
     width: 50px;
     height: 50px;
     text-align: center;
@@ -88,7 +88,7 @@ th {
 
 
 .draggable {
-    border: 2px solid #09ee40;
+    border: 2px solid green;
     cursor: move;
 
 }
@@ -144,7 +144,7 @@ th {
 
 .shake {
     animation: shake 0.4s;
-    border: #e11414 solid 2px;
+    border: red solid 2px;
 }
 
 .btn-ready {
@@ -226,12 +226,10 @@ th {
 
 
 /*............crosses, dots........................ */
-
-
 .battlefield-miss {
     font-weight: bold;
     font-size: 24px;
-    background: radial-gradient(circle, #000000 4px, transparent 1px), #f2f4f8;
+    background: radial-gradient(circle, #2f2f2f 3px, transparent 1px), #f2f4f8;;
     background-position: center;
     background-repeat: no-repeat;
 
@@ -240,7 +238,7 @@ th {
 .battlefield-miss-auto {
     font-weight: bold;
     font-size: 24px;
-    background: radial-gradient(circle, #8a8a8a 3px, transparent 1px), #f1f1f1;
+    background: radial-gradient(circle, #8a8a8a 3px, transparent 1px), #f0f1f5;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -279,6 +277,18 @@ th {
     transform-origin: center;
     pointer-events: none;
 }
+.battlefield-wait .battlefield-cell-done .z::before,
+.battlefield-wait .battlefield-cell-done .z::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 150%;
+    height: 2px;
+    background: #f87f7f;
+    transform-origin: center;
+    pointer-events: none;
+}
 
 .battlefield-cell-done .z::before {
     transform: translate(-50%, -50%) rotate(45deg);
@@ -291,39 +301,37 @@ th {
 .battlefield-cell-done {
     outline: 2px solid red;
 }
+.battlefield-wait .battlefield-cell-done {
+    outline: 2px solid #f87f7f;
+}
 
 .battlefield-wait:disabled {
 
 }
 
-/*.battlefield-wait {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    position: relative;*/
-/*    background: lightblue;*/
-/*}*/
-/*.battlefield-wait::after {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    inset: 0; !* равен top:0; right:0; bottom:0; left:0 *!*/
-/*    background: rgba(0, 0, 0, 0.5); !* чёрная полупрозрачная маска *!*/
-/*    pointer-events: none; !* чтобы клики проходили сквозь маску *!*/
-/*    border-radius: inherit; !* если есть скругления *!*/
-/*}*/
 .battlefield-wait table {
     color: #a6a6a6;
 }
 .battlefield-wait td {
     color: #bebebe;
-    border: 1px solid #b2b4f3;
+    /*border: 1px solid #b2b4f3;*/
+    border: 1px solid rgba(180,180,255,.5);
 }
 
 .battlefield-wait .battlefield-miss {
-    background: radial-gradient(circle, #7e7e7e 4px, transparent 1px), #f1f3fa;
+    background: radial-gradient(circle, #7e7e7e 3px, transparent 1px), #f9fbfd;
 }
+.battlefield-wait .battlefield-miss-auto {
+    background: radial-gradient(circle, #7e7e7e 3px, transparent 1px), #f9fbfd;
+}
+
 .battlefield-wait .battlefield-cell-hit .z::before,
 .battlefield-wait  .battlefield-cell-hit .z::after {
    background: #f87f7f;
+}
+.battlefield-wait .battlefield-cell-done .z::before,
+.battlefield-wait  .battlefield-cell-done .z::after {
+    background: #f87f7f;
 }
 
 
@@ -334,3 +342,32 @@ th {
     outline: 2px solid #4dd328;
 }
 
+.processGame-text {
+    display: flex;
+}
+.text-whoTurn {
+    font-weight: bold;
+    font-size: 24px;
+    width: 500px;
+}
+.field1-text {
+    /*margin-right: 290px;*/
+    margin-bottom: 10px;
+}
+.field2-text {
+    margin-left: 100px;
+    margin-bottom: 10px;
+}
+.playAgain {
+    border: 2px solid red;
+    /*border-radius: 15px;*/
+    height: 40px;
+    background: #ffffff;
+    width: 150px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.playAgain:hover {
+    background: red;
+    color: #fff;
+}
